--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
- 
+<!doctype html>
 <html>
   <head>
-    <title>My first website</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
-  </body>
-</html>
+    <title>Rainydays</title>
+    <meta name="description" content="This is a page which sells rain jackets">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  </head>
+  
+  <body>
+    <Header>
+    <h1>Where you feel most alive!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
+  </Header> 
+  </body>
+<Header>
+  <Nav>
+    <Ul>
+      <li><a href="index.html">Home</li>
+      <li>Woman</li>
+      <li>Men</li>
+      <li>Contact</li>
+      <li>About</li>
+    </Ul>
+  </Nav>
+</Header>
+<Main>
+
+</Main>
+
+<footer>
+
+</footer>
+
+
+  </html>
+
+<img src="RainyDays_logo" alt="">
+
+<input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
+
+
+<label for="add-to-cart">Add to Cart</label>
+<input type="checkbox" id="add-to-cart">
+<section class="cart">
+  <h3>Product One</h3>
+  <p>This is a description of the product</p>
+  <p>$50</p>
+  <a href="checkout.html">Go to checkout</a>
+</section>
