--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
   <body>
     <Header>
     <h1>Where you feel most alive!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
   </Header> 
-  </body>
-<Header>
-  <Nav>
+</body>
+  <Header>
+   <Nav>
     <Ul>
-      <li><a href="index.html">Home</li>
-      <li>Woman</li>
-      <li>Men</li>
-      <li>Contact</li>
-      <li>About</li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="woman.html">Woman</a></li>
+      <li><a href="men.html">Men</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="About.html">About</a></li>
     </Ul>
   </Nav>
 </Header>
 <Main>
-
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
 </Main>
 
 <footer>
@@ -39,8 +38,6 @@
 
 <input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
 
-
-<label for="add-to-cart">Add to Cart</label>
 <input type="checkbox" id="add-to-cart">
 <section class="cart">
   <h3>Product One</h3>
