--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <title>Rainydays</title>
     <meta name="description" content="This is a page which sells rain jackets">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   </head>
-  
+
+</body>
+<Header>
+ <Nav>
+  <Ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="woman.html">Woman</a></li>
+    <li><a href="men.html">Men</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="About.html">About</a></li>
+  </Ul>
+</Nav>
+
   <body>
     <Header>
     <h1>Where you feel most alive!</h1>
   </Header> 
-</body>
-  <Header>
-   <Nav>
-    <Ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="woman.html">Woman</a></li>
-      <li><a href="men.html">Men</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="About.html">About</a></li>
-    </Ul>
-  </Nav>
+  <input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
+
+
 </Header>
 <Main>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
@@ -34,9 +37,8 @@
 
   </html>
 
-<img src="RainyDays_logo" alt="">
+<img
 
-<input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
 
 <input type="checkbox" id="add-to-cart">
 <section class="cart">
