color to top menu

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="Women">Women</a>
+  <a href="Men">Men</a>
+  <a href="Contact">Contact</a>
+  <a href="About">About</a>
+</div>
+
 <html>
   <head>
     <title>Rainydays</title>
@@ -11,7 +19,7 @@
  <Nav>
   <Ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="woman.html">Woman</a></li>
+    <li><a href="women.html">Women</a></li>
     <li><a href="men.html">Men</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="About.html">About</a></li>
@@ -29,7 +37,10 @@
 <Main>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
 </Main>
+<section>
+  <img src="RainyDays_Logo.png"/>
 
+</section>
 <footer>
 
 </footer>
