--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
+    <i class="material-icons">person</i>
+    
+
+
 
     <html>
       <head>
@@ -22,7 +26,7 @@
       </head>
       <body>
         <i class="material-icons">favorite</i>
-        
+
 
 
 <head>
