--- a/Index/Index.html
+++ b/Index/Index.html
@@ -2,53 +2,45 @@
 <html>
 <head>
   <link rel="stylesheet" href="Index.css">
-</head>
-<body>
-<p>kush is a smart person</p>
-</body>
-
-
-</html>
-<html>
-  <head>
-    <title>Rainydays</title>
-    <meta name="description" content="This is a page which sells rain jackets">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-
-<head>
-  <title>Google Icons</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  <body>
-    <i class="material-icons">home</i>
-    <i class="material-icons">favorite</i>
-    <i class="material-icons">shopping_cart</i>
-    <i class="material-icons">message</i>
-    <i class="material-icons">person</i>
-
-
-  
-  <html>
+    <body>
     <div class="topnav">
+      <img src="RainyDays_Logo.png"/>
       <a class="active" href="#home">Home</a>
       <a href="Women">Women</a>
       <a href="Men">Men</a>
       <a href="Contact">Contact</a>
       <a href="About">About</a>
       <input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
+      <i class="material-icons">home</i>
     </div>
-  </html>
 
 
-  <body>
+<p>Icon button:</p>
+<i class="material-icons">favorite</i>
+<i class="material-icons">shopping_cart</i>
+<i class="material-icons">message</i>
+<i class="material-icons">person</i>
+
+    <title>Rainydays</title>
+    <meta name="description" content="This is a page which sells rain jackets">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+  <title>Google Icons</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+    <i class="material-icons">home</i>
+    <i class="material-icons">favorite</i>
+    <i class="material-icons">shopping_cart</i>
+    <i class="material-icons">message</i>
+    <i class="material-icons">person</i>
+ 
     <Header>
     <h1>Where you feel most alive!</h1>
   </Header> 
 
-</Header>
-<Main>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
 </Main>
 <section>
@@ -59,5 +51,6 @@
 
 
 </footer>
-
+</body>
+</head>
   </html>
