--- a/Index/Index.html
+++ b/Index/Index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="Index.css">
     <body>
     <div class="topnav">
-      <img src="RainyDays_Logo.png"/>
+      <img src="Logo.png"/>
       <a class="active" href="#home">Home</a>
       <a href="Women">Women</a>
       <a href="Men">Men</a>
@@ -37,7 +37,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
 </Main>
 <section>
-  <img src="RainyDays_Logo.png"/>
+  <img src="Logo.png"/>
 </section>
 
 <footer>
