--- a/Index/Index.html
+++ b/Index/Index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html>
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Site where you can buy rain jackets" />
+    <title>RainyDays | Home</title>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+
     <body>
-      <link rel="stylesheet" href="Index.css">
+  
     <div class="topnav">
-      <img src="Logo.png"/>
+      <img src="Logo.jpg"/>
       <a class="active" href="#home">Home</a>
       <a href="Women">Women</a>
       <a href="Men">Men</a>
@@ -13,35 +20,32 @@
       <input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
     </div>
 
-
     <title>Rainydays</title>
     <meta name="description" content="This is a page which sells rain jackets">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-  <title>Google Icons</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<p>
+<p1>
     <i class="material-icons">home</i>
     <i class="material-icons">favorite</i>
     <i class="material-icons">shopping_cart</i>
     <i class="material-icons">message</i>
     <i class="material-icons">person</i>
-</p>
+</p1>
     <Header>
     <h1>Where you feel most alive!</h1>
   </Header> 
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p>
+  <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p2>
 </Main>
 <section>
-  <img src="Logo.png"/>
+  <img src="Logo.jpg"/>
 </section>
 
-<footer>
-</footer>
+<footer>>/ Copyright & copy /;</footer>
+
 
 </body>
 </head>
