--- a/Index/Index.html
+++ b/Index/Index.html
@@ -8,17 +8,15 @@
     <link href="index.css" rel="stylesheet" />
   </head>
 
-    <body>
-  
-    <div class="topnav">
-      <img src="Logo.jpg"/>
-      <a class="active" href="#home">Home</a>
-      <a href="Women">Women</a>
-      <a href="Men">Men</a>
-      <a href="Contact">Contact</a>
-      <a href="About">About</a>
-      <input class="search" type="text" placeholder="What are you looking for?" name="search" /><i class="fas fa-search"></i>
-    </div>
+
+  <nav class="navigation-bar">
+    <img class="logo" src="logo.jpg">
+    <a href="#">Home</a>
+    <a href="#">Women</a>
+    <a href="#">Men</a>
+    <a href="#">About</a>
+    <input type="Search" placeholder="What are you looking for?">
+  </nav>
 
     <title>Rainydays</title>
     <meta name="description" content="This is a page which sells rain jackets">
@@ -34,17 +32,46 @@
     <i class="material-icons">message</i>
     <i class="material-icons">person</i>
 </p1>
-    <Header>
+  <Header>
     <h1>Where you feel most alive!</h1>
   </Header> 
 
-  <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p2>
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="/Images/hiking1.jpg" alt="Looking through a walley with a river running through it" style="width:100%">
+        <div class="container">
+        </div>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <img src="/Images/hiking2.jpg" alt="Two persons hiking up a mountain" style="width:100%">
+        <div class="container">
+        </div>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <img src="/Images/hiking3.jpg" alt="Woman standing in front of a waterfall" style="width:100%">
+        <div class="container">
+        </div>
+      </div>
+    </div>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p2>
 </Main>
+
 <section>
-  <img src="Logo.jpg"/>
+  <img src=mountains.jpg alt="Mountain design" style="width: 50%;">
 </section>
 
-<footer>>/ Copyright & copy /;</footer>
+<footer>
+  / Copyright & copy /;
+<img src="small-logo.jpg" alt="Logo in small" style="width: 5%;">
+</footer>
 
 
 </body>
