--- a/Index/Index.html
+++ b/Index/Index.html
@@ -8,14 +8,15 @@
     <link href="index.css" rel="stylesheet" />
   </head>
 
+<nav>
+  <input type="Search" placeholder="What are you looking for?">
+</nav>
 
   <nav class="navigation-bar">
-    <img class="logo" src="logo.jpg">
     <a href="#">Home</a>
     <a href="#">Women</a>
     <a href="#">Men</a>
     <a href="#">About</a>
-    <input type="Search" placeholder="What are you looking for?">
   </nav>
 
     <title>Rainydays</title>
@@ -25,13 +26,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<p1>
+<p>
     <i class="material-icons">home</i>
     <i class="material-icons">favorite</i>
     <i class="material-icons">shopping_cart</i>
     <i class="material-icons">message</i>
     <i class="material-icons">person</i>
-</p1>
+</p>
+
+<div>
+  <img class="logo" src="Images/Logo.jpg">
+</div>
+
+
   <Header>
     <h1>Where you feel most alive!</h1>
   </Header> 
@@ -39,7 +46,15 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="/Images/hiking1.jpg" alt="Looking through a walley with a river running through it" style="width:100%">
+        <img src="Images/hiking1.jpg" alt="Looking through a walley with a river running through it" style="width:100%">
+        <div class="container">
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="Images/hiking2.jpg" alt="Two persons hiking up a mountain" style="width:100%">
         <div class="container">
         </div>
       </div>
@@ -47,15 +62,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="/Images/hiking2.jpg" alt="Two persons hiking up a mountain" style="width:100%">
-        <div class="container">
-        </div>
-      </div>
-    </div>
-  
-    <div class="column">
-      <div class="card">
-        <img src="/Images/hiking3.jpg" alt="Woman standing in front of a waterfall" style="width:100%">
+        <img src="Images/hiking3.jpg" alt="Woman standing in front of a waterfall" style="width:100%">
         <div class="container">
         </div>
       </div>
@@ -65,12 +72,13 @@
 </Main>
 
 <section>
-  <img src=mountains.jpg alt="Mountain design" style="width: 50%;">
+  <img src="Images/Mountains.jpg" alt="Mountain design" style="width: 50%;">
 </section>
 
 <footer>
-  / Copyright & copy /;
-<img src="small-logo.jpg" alt="Logo in small" style="width: 5%;">
+<img src="Images/small-logo.jpg" alt="Logo in small" style="width: 5%;">
+<br>
+/ Copyright & copy /;
 </footer>
 
 
