--- a/Index/Index.html
+++ b/Index/Index.html
@@ -7,17 +7,26 @@
     <title>RainyDays | Home</title>
     <link href="index.css" rel="stylesheet" />
   </head>
+<body>
+<div>
+  <img src="Images/Logo.jpg" alt="Rainydays logo in the header" width="20%"> 
+</div>
 
-<nav>
-  <input type="Search" placeholder="What are you looking for?">
-</nav>
+<div class="Icons">
+    <i class="material-icons">home</i>
+    <i class="material-icons">favorite</i>
+    <i class="material-icons">shopping_cart</i>
+    <i class="material-icons">message</i>
+    <i class="material-icons">person</i>
+</div>
 
-  <nav class="navigation-bar">
-    <a href="#">Home</a>
-    <a href="#">Women</a>
-    <a href="#">Men</a>
-    <a href="#">About</a>
-  </nav>
+<div class="topnav">
+  <a class="active" href="#home">HOME</a>
+  <a href="Women">WOMEN</a>
+  <a href="Men">MEN</a>
+  <a href="About">ABOUT</a>
+  <input type="text" placeholder="What are you looking for?">
+</div>
 
     <title>Rainydays</title>
     <meta name="description" content="This is a page which sells rain jackets">
@@ -25,19 +34,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-<p>
-    <i class="material-icons">home</i>
-    <i class="material-icons">favorite</i>
-    <i class="material-icons">shopping_cart</i>
-    <i class="material-icons">message</i>
-    <i class="material-icons">person</i>
-</p>
-
-<div>
-  <img class="logo" src="Images/Logo.jpg">
-</div>
-
 
   <Header>
     <h1>Where you feel most alive!</h1>
@@ -67,21 +63,26 @@
         </div>
       </div>
     </div>
-
+<br>
+<br>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cumque ducimus odit doloremque iusto nesciunt laborum inventore ex ipsum, molestias quo quia soluta aliquam quos, illum ad minus sunt..</p2>
 </Main>
 
 <section>
   <img src="Images/Mountains.jpg" alt="Mountain design" style="width: 50%;">
+  <br>
+  <br>
+  <br>
 </section>
 
 <footer>
-<img src="Images/small-logo.jpg" alt="Logo in small" style="width: 5%;">
+<img src="Images/Logo.jpg" alt="Logo in small" style="width: 10%">
 <br>
-/ Copyright & copy /;
+/ Copyright & copy /
 </footer>
 
 
 </body>
 </head>
   </html>
+
